fix background color on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,14 +46,14 @@ nav {
     top: 0;
     width: 100%;
     text-align: center;
-    padding: 5px 0;
+    padding: 5px ;
 }
 
 nav ul {
     list-style: none;
     display: flex;
     justify-content: space-around;
-    margin: 0 2px;
+    margin: 0 ;
     padding: 0;
 }
 
@@ -78,7 +78,7 @@ nav a:hover {
     height: 800px;
     width: 100%;
     background: url('../images/civic-wallpaper.jpg') no-repeat center center;
-    background-color: silver;
+    background-color: silver no-repeat center center;
 }
 
 
@@ -97,6 +97,7 @@ nav a:hover {
     width: 40%;
     background: rgb(96, 141, 78);
     height: 150px;
+    overflow: hidden;
 
 }
 
